force-app/main/default/objects/User/fields/disco__Youreka_Advanced_Features_Licenses__c.field-meta.xml
<CustomField>
    <fullName>disco__Youreka_Advanced_Features_Licenses__c</fullName>
    <description>Licenses for advanced features</description>
    <inlineHelpText>Licenses for advanced features</inlineHelpText>
    <label>Youreka Advanced Features Licenses</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advanced Data Collection</fullName>
            </value>
            <value>
                <fullName>Maps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>