force-app/main/default/objects/User/fields/disco__Youreka_License_Type__c.field-meta.xml
<CustomField>
    <fullName>disco__Youreka_License_Type__c</fullName>
    <description>Youreka User License Type</description>
    <inlineHelpText>Youreka User License Type</inlineHelpText>
    <label>Youreka License Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>PremiumMobile</fullName>
            </value>
            <value>
                <fullName>TemplateBuilder</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>CommunityMobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>