force-app/main/default/objects/User/fields/EmployeeJobDescription__c.field-meta.xml
<CustomField>
    <fullName>EmployeeJobDescription__c</fullName>
    <label>EmployeeJobDescription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>