force-app/main/default/objects/User/fields/PersonnelNumberID__c.field-meta.xml
<CustomField>
    <fullName>PersonnelNumberID__c</fullName>
    <externalId>true</externalId>
    <label>Personnel Number</label>
    <length>64</length>
    <type>Text</type>
</CustomField>