force-app/main/default/objects/User/listViews/Active_Without_FederationID.listView-meta.xml
<ListView>
    <fullName>Active_Without_FederationID</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USERS.SAML_SUBJECT</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.SAML_SUBJECT</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notEqual</operation>
        <value>A BLANK TEMPLATE (No Permissions)</value>
    </filters>
    <label>Active Without FederationID</label>
</ListView>