force-app/main/default/objects/User/listViews/Approvers.listView-meta.xml
<ListView>
    <fullName>Approvers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Approvers</value>
    </filters>
    <label>Approvers</label>
    <sharedTo>
        <group>NPL_Administrator</group>
    </sharedTo>
</ListView>