force-app/main/default/objects/User/listViews/Laborers.listView-meta.xml
<ListView>
    <fullName>Laborers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>PersonnelNumberID__c</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>A BLANK TEMPLATE (No Permissions)</value>
    </filters>
    <label>Laborers</label>
</ListView>