force-app/main/default/objects/User/listViews/UAT_Users.listView-meta.xml
<ListView>
    <fullName>UAT_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.COMMUNITY_NICKNAME</field>
        <operation>contains</operation>
        <value>UAT</value>
    </filters>
    <label>UAT Users</label>
</ListView>